<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="2dp"
    android:layout_marginEnd="2dp"
    android:clickable="true"
    android:elevation="@dimen/elevation"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_movie_poster"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:src="?android:attr/colorPrimary"
            android:contentDescription="@string/content_movie_poster" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_movie_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:ellipsize="end"
                android:text="@string/example_movie_name"
                android:textStyle="bold"
                android:textColor="?android:textColorPrimary"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tv_movie_category_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_category_duration" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>