<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:elevation="@dimen/elevation"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="120dp"
            android:layout_height="180dp">

            <ImageView
                android:id="@+id/img_movie_poster"
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:src="@drawable/poster_how_to_train"
                android:contentDescription="@string/content_movie_poster" />

            <TextView
                android:id="@+id/tv_movie_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_duration"
                android:textColor="@android:color/white"
                android:background="#AA000000"
                android:layout_gravity="end"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:textSize="12sp"/>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <TextView
            android:id="@+id/tv_movie_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:maxLines="2"
            android:ellipsize="end"
            android:text="@string/example_movie_name"
            android:textStyle="bold"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>